Refactoring to generate class diagram by packagw